# lazyusage

./: .gitignore  .gnhf-prompt.md  .opentraces.json  AGENTS.md  CATPPUCCIN_THEME.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FINAL_STYLING_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SUBSCRIPTION_FEATURE_SUMMARY.md  SUBSCRIPTION_FIX.md  TECH_DEBT.md  TODOS.md  TUI_COLOR_FIX_SUMMARY.md  TUI_STYLING_CHANGES.md  alias-setup.md  biome.json  bunfig.toml  check-claude-usage.sh  check-codex-usage.sh  package.json  pyproject.toml  requirements.txt  setup.py  test-catppuccin.sh  test-final-styling.sh  test-suite.sh  test-tui-styling.sh  test-tui-visual.sh  tsconfig.json
.agent-trace/: traces.jsonl
.github/workflows/: ci.yml  release.yml
docs/design/: 01-capacity_prediction.md
docs/research/: 001-claude-code-monitoring-usage.md  codexbar-reliability-scout.md  lazyusage-chart-rendering.md  railway-cli.md
examples/: SKILL.md  agent_integration.py  agent_integration.sh  agent_integration.ts
examples/dashboard/: README.md  package-lock.json  package.json
kb/br/: 001-claude-code-monitoring-usage.md  lazyusage-chart-rendering.md
kb/plans/: 01-capacity_prediction.md  02-daemon_collector.md
scripts/: build.ts  soak-chain.ts
skills/lazyusage/: SKILL.md
src/: __init__.py  cli.py
src/collectors/: base.py  claude.py  codex.py
src/formatters/: dashboard.py  json.py  text.py  tui.py
src/parsers/: claude.py  codex.py
src/providers/: __init__.py  api.py  base.py  cache.py  chain.py  credentials.py  factory.py  pty.py
(+71 files in other folders)
